--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,7 @@
 [editor_metadata]
 
 executable_path="/private/var/folders/4x/_86r4yls74n0fvxwdfs2j6jw0000gv/T/AppTranslocation/73ECBFE4-F381-4146-8DBF-1DDBD0FF60EB/d/Godot.app/Contents/MacOS/Godot"
+use_advanced_connections=false
 
 [debug_options]
 
